--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ paramiko = ">=2.7.2,<4.0.0"
 importlib-metadata = "<4.3"
 pyaarlo = ">=0.7.1.3,<0.9.0.0"
 icmplib = "^3.0.3"
+jsonpickle = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
 "flake8" = "^5.0.4"
